--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ requires-python = ">=3.14"
 dependencies = [
     "mypy>=1.18.2",
     "pytest>=8.4.2",
+    "structlog>=25.5.0",
     "typer>=0.20.0",
 ]
