--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.14"
 dependencies = [
     "mypy>=1.18.2",
     "pytest>=8.4.2",
+    "python-dotenv>=1.2.1",
     "structlog>=25.5.0",
     "typer>=0.20.0",
 ]
